--- a/app/src/main/res/values-he/strings.xml
+++ b/app/src/main/res/values-he/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <!-- Toolbar -->
+    <string name="app_name">Sound Recorder</string>
     <string name="action_licenses">רשיונות</string>
     <string name="action_settings">הגדרות</string>
     <string name="tab_title_record">הקלטה</string>
