--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,15 @@
     <string name="dialog_action_yes_delete">Yes, delete</string>
     <string name="dialog_action_no">No</string>
 
+
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_main">Android Example - ListPreference</string>
+
+    <!-- SharedPreferences Keys -->
+    <string name="sp_key_user_name">userName</string>
+    <string name="sp_key_foreground_color">foregroundColor</string>
+    <string name="sp_key_background_color">backgroundColor</string>
+
     <string name="no_saved_recordings_message">No saved recordings</string>
     <string name="pause_recording_button">Pause</string>
     <string name="resume_recording_button">Resume</string>
